--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <title>Stripe Payment Demo</title> 
 <body> 
     <h3>Welcome to Payment Gateway</h3> 
-    <form action="payment" method="POST"> 
+    <form action="Payment" method="POST"> 
        <script 
           src="//checkout.stripe.com/v2/checkout.js"
           class="stripe-button"
